# yourownskilltree-be/common/src/main/kotlin/model/Debug.kt
@@ -11,7 +11,6 @@ enum class NodeStubs {
     NOT_FOUND,
     BAD_ID,
     CANNOT_DELETE,
-    BAD_SEARCH_STRING,
     DB_ERROR,
 }
 
